@@ -630,6 +630,9 @@ F:211:0x80:0x80
 # dead small tree
 F:212:0x80:0x80
 
+# molten glass wall
+F:217:0x80:0xAE
+
 # something
 K:0:0x80:0x80
 
