@@ -580,6 +580,9 @@ F:214:0x80/0x81
 # glacial wall
 F:215:0xC5/0x92
 
+# molten glass wall
+F:217:0xC0/0x9F
+
 # Skeleton
 G:M:1:0xC6/0x91
 
