@@ -614,6 +614,9 @@ F:214:0x80/0x80
 # glacial wall
 F:215:0xD0/0x88
 
+# molten glass wall
+F:217:0xD0/0x89
+
 # something
 K:0:0x80/0x80
 
